--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -120,14 +120,13 @@
 
         <div id="intro" class="card" style="background: #FED202;" style="max-width: 560px; padding: 40px 24px 24px 24px;">
           <div class="row">
+
             <div class="col col-1">
-              <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-bottom: 0px!important;">Scores Submitted!</h1>
-              <!-- <p class="body sub-section-heading" style="margin-bottom: 20px; text-align: center; color: green; font-weight: 600;">Scores update every 24 hours</p> -->
-              <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Thank you for playing and please share with your friends 💚</h1> -->
+                <img id="welcome-image" style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
+                <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Scores Submitted!</h1>
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%;">
+            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%; max-width: 560px; margin: 0 auto; padding: 24px 0px 0px 0px;">
                 <ul class="list-unstyled">
                     <ul class="list-unstyled">
                         <li class="social-share instagram" style="margin-bottom: 16px;">
@@ -154,7 +153,7 @@
                     </ul>
                     <li>
                         <a href="sock-drop-game.html" style="text-decoration: none;">
-                            <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">Play Again</button>
+                            <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 48px;">Play Again</button>
                         </a>
                     </li>
                     <li>
