--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -118,15 +118,15 @@
     <!-- <main style="display: flex; align-items: center; justify-content: center;"> -->
     <main>
 
-        <div id="intro" class="card" style="background: #FED202;" style="max-width: 560px; padding: 40px 24px 24px 24px;">
-          <div class="row">
+        <div id="intro" class="card" style="background: #FED202;" style="max-width: 420px; padding: 40px 24px 24px 24px;">
+          <div class="row" style="padding: 0px 24px;">
 
             <div class="col col-1">
                 <img id="welcome-image" style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
                 <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Scores Submitted!</h1>
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%; max-width: 560px; margin: 0 auto; padding: 24px 0px 0px 0px;">
+            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%; max-width: 420px; margin: 0 auto; padding: 24px 0px 0px 0px;">
                 <ul class="list-unstyled">
                     <ul class="list-unstyled">
                         <li class="social-share instagram" style="margin-bottom: 16px;">
