--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                     <h1 class="title">Are you 21 or older?</h1>
                     <div class="row">
                         <div class="col">
-                            <a href="https://www.google.com/"><button type="button" class="btn btn-outline">No</button></a>
+                            <a href="https://www.google.com/"><button type="button" class="btn btn-outline" style="border-radius: 48px;">No</button></a>
                         </div>
                         <div class="col">
-                            <button id="verify_age_button" type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">Yes</button>
+                            <button id="verify_age_button" type="button" class="btn btn-secondary" style="border-radius: 48px;" data-dismiss="modal" aria-label="Close">Yes</button>
                         </div>
                     </div>
                 </div>
