--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
-            <!-- <blockquote class="blockquote" style="text-align: left; margin: 0px; width: 100%; padding: 16px 24px 0px 24px;"> -->
-                <!-- <ul class="row list-unstyled">
+            <blockquote class="blockquote" style="text-align: left; margin: 0px; width: 100%; padding: 16px 24px 0px 24px;">
+                <ul class="row list-unstyled">
                     <li class="col  social-share instagram" style="margin: 0px 8px;">
                         <a href="https://www.instagram.com/cannaco.world/" target="_blank" style="text-decoration: none;">
                             <button class="btn" style="justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
@@ -187,7 +187,7 @@
                             </button>
                         </a>
                     </li>
-                </ul> -->
+                </ul>
 
                 <!-- <div class="col col-1" style="padding: 8px 24px 0px 24px;">
                     <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Starts In</h1>
@@ -196,7 +196,7 @@
                 <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
                 </a> -->
-            <!-- </blockquote> -->
+            </blockquote>
 
 
             <div id="products" class="container" style="max-width: 100%!important; padding: 16px 0px 24px 0px;">    
