--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; margin: 0px; width: 100%; padding: 16px 24px 0px 24px;">
+            <!-- <blockquote class="blockquote" style="text-align: left; margin: 0px; width: 100%; padding: 16px 24px 0px 24px;">
                 <ul class="row list-unstyled">
                     <li class="col  social-share instagram" style="margin: 0px 8px;">
                         <a href="https://www.instagram.com/cannaco.world/" target="_blank" style="text-decoration: none;">
@@ -189,14 +189,14 @@
                     </li>
                 </ul>
 
-                <!-- <div class="col col-1" style="padding: 8px 24px 0px 24px;">
+                <div class="col col-1" style="padding: 8px 24px 0px 24px;">
                     <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Starts In</h1>
-                  </div> -->
+                  </div>
       
-                <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
+                <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
-                </a> -->
-            </blockquote>
+                </a>
+            </blockquote> -->
 
 
             <div id="products" class="container" style="max-width: 100%!important; padding: 16px 0px 24px 0px;">    
@@ -349,15 +349,15 @@
                 </div>
             </div>
 
-            <!-- <blockquote class="blockquote" style="text-align: left; padding: 24px 40px 0px 40px; width: 100%; display: block;">      
+            <blockquote class="blockquote" style="text-align: left; padding: 24px 40px 0px 40px; width: 100%; display: block;">      
                 <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 24px; max-width: 420px; margin: 0px auto;">Play Now</button>
                 </a>
-            </blockquote> -->
+            </blockquote>
 
 
 
-            <p id="demo" style="width: 80%;
+            <!-- <p id="demo" style="width: 80%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -368,7 +368,7 @@
             max-width: 560px;
             display: block;
             margin: 0 auto;
-            margin-top: 0px;"></p>
+            margin-top: 0px;"></p> -->
 
             <script>
             // Set the date we're counting down to
