--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
       <source src="assets/audio/jammin.mp3" type="audio/mpeg" loop="loop">
     </audio>
 
-    <script>
+    <!-- <script>
         var audio;
         $("#verify_age_button").on("click", function(e){
             if(!audio){
                 audio = new Audio('assets/audio/jammin.mp3');;
             }
         });
-    </script>
+    </script> -->
 
 
   <!-- Main -->
