--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -154,8 +154,8 @@
 
 
 
-    <!---- Game Rules Modal ---->
-    <div id="leaderboard_modal" class="leaderboard-modal modal fade" tabindex="-1" role="dialog" aria-labelledby="leaderboard_modal" aria-hidden="true">
+    <!---- Leaderboard ---->
+    <div id="leaderboard_modal" class="leaderboard-modal modal fade" tabindex="-1" role="dialog" aria-labelledby="leaderboard_modal" aria-hidden="true" style="z-index: 1200">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="card product-card product-template-reduced" style="-webkit-box-shadow: 0 0 80px rgb(0 0 0 / 40%);
