--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -67,7 +67,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/corejs-typeahead/1.3.1/typeahead.bundle.min.js" type="text/javascript"></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.min.js" type="text/javascript"></script>
-
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>
 
   <!-- Publishing Scripts -->  
   <script src="public/base.js" type="text/javascript"></script>
@@ -82,21 +82,18 @@
         backdrop: 'static', keyboard: false
     });
     
-    // This code is to trigger game rules modal every single session - not ideal
+    // This code is to trigger game rules modal on every page load - not ideal
     // $( document ).ready(function() {
     //     $("#game_rules_modal").modal('show');
     // });
     
-    // This code is to trigger game rules modal on page load but also store local cookies and prevents display on successive returns
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function() {
+    // This code is to trigger game rules modal on page load but also store local cookies and prevents display on subsequent returns
+    $(document).ready(function() {
         if ($.cookie('pop') == null) {
-          $('#game_rules_modal').modal('show');
-          $.cookie('pop', '1');
+            $('#game_rules_modal').modal('show');
+            $.cookie('pop', '1');
         }
-      });
-    </script>
+    });
     // $( document ).ready(function() {
     //       if (localStorage.getItem("pageloadcount")) {
     //           $("#game_rules_modal").hide();
