--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
                 </div>
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; padding: 8px 40px 0px 40px; width: 100%; display: block;">      
+            <blockquote class="blockquote" style="text-align: left; padding: 8px 40px 0px 40px; width: 100%; display: block; max-width: 420px!important; margin: 0px auto;">
                 <a href="sock-drop-game.html" style="text-decoration: none;">
-                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 20px; max-width: 420px; margin: 0px auto;">Play Now</button>
+                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 20px;">Play Now</button>
                 </a>
             </blockquote>
 
