--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -134,7 +134,7 @@
         <div class="modal-content" style="padding: 16px;">
           <div class="card product-card product-template-reduced" style="-webkit-box-shadow: 0 0 80px rgb(0 0 0 / 40%);
           -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px; background: #FED202; overflow: hidden;">
+          box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px!important; background: #FED202; overflow: hidden;">
 
             <div class="row" style="padding: 16px;">
               <div class="col col-1">
@@ -459,7 +459,7 @@
       </div>
 
       <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-        <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/back-drop-light.png">
+        <img style="max-width: 64%; max-height: 64%;" src="assets/sock-drop/back-drop-light.png">
       </div>
 
       <div id="score_holder">
