--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -206,28 +206,28 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. </th>
+                          <th scope="row">1. Kota Abbott</th>
+                          <td>614</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. JohnGraham</th>
                           <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. </th>
-                          <td>--</td>
+                          <th scope="row">3. Kotaloha</th>
+                          <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. </th>
-                          <td>--</td>
+                          <th scope="row">4. Stormy</th>
+                          <td>28</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. </th>
-                          <td>--</td>
+                          <th scope="row">5. Nek</th>
+                          <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. </th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">6. </th>
-                          <td>--</td>
+                          <th scope="row">6. Susan Garisson</th>
+                          <td>10</td>
                         </tr>
                         <tr>
                           <th scope="row">7. </th>
@@ -262,28 +262,28 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. </th>
-                          <td>--</td>
+                          <th scope="row">1. Kota Abbott</th>
+                          <td>377</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. </th>
-                          <td>--</td>
+                          <th scope="row">2. John Graham</th>
+                          <td>360</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. </th>
-                          <td>--</td>
+                          <th scope="row">3. Stormy</th>
+                          <td>7</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. </th>
-                          <td>--</td>
+                          <th scope="row">4. Kotaloha</th>
+                          <td>5</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. </th>
-                          <td>--</td>
+                          <th scope="row">5. Susan Garisson</th>
+                          <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. </th>
-                          <td>--</td>
+                          <th scope="row">6. Nek</th>
+                          <td>2</td>
                         </tr>
                         <tr>
                           <th scope="row">7. </th>
