--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -211,27 +211,27 @@
                         </tr>
                         <tr>
                           <th scope="row">2. JohnGraham</th>
-                          <td>--</td>
+                          <td>561</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Kotaloha</th>
+                          <th scope="row">3. Bryan</th>
+                          <td>99</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. Kotaloha</th>
                           <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Stormy</th>
+                          <th scope="row">5. Stormy</th>
                           <td>28</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Nek</th>
+                          <th scope="row">6. Nek</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Susan Garisson</th>
+                          <th scope="row">7. Susan Garisson</th>
                           <td>10</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. </th>
-                          <td>--</td>
                         </tr>
                         <tr>
                           <th scope="row">8. </th>
@@ -270,24 +270,24 @@
                           <td>360</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Stormy</th>
+                          <th scope="row">3. Bryan</th>
+                          <td>60</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. Stormy</th>
                           <td>7</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Kotaloha</th>
+                          <th scope="row">5. Kotaloha</th>
                           <td>5</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Susan Garisson</th>
+                          <th scope="row">6. Susan Garisson</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Nek</th>
+                          <th scope="row">7. Nek</th>
                           <td>2</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. </th>
-                          <td>--</td>
                         </tr>
                         <tr>
                           <th scope="row">8. </th>
