--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -218,32 +218,32 @@
                           <td>99</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Kotaloha</th>
+                          <th scope="row">4. MJCP</th>
+                          <td>74</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Kotaloha</th>
                           <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Stormy</th>
+                          <th scope="row">6. Jesus b</th>
+                          <td>35</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Carrie Weese</th>
+                          <td>33</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Stormy</th>
                           <td>28</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Nek</th>
+                          <th scope="row">9. Nek</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Susan Garisson</th>
+                          <th scope="row">10. Susan Garisson</th>
                           <td>10</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. </th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. </th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. </th>
-                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
@@ -274,32 +274,32 @@
                           <td>60</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Stormy</th>
+                          <th scope="row">4. MJCP</th>
+                          <td>37</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Carrie Weese</th>
+                          <td>15</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. Jesus b</th>
+                          <td>9</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Stormy</th>
                           <td>7</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Kotaloha</th>
+                          <th scope="row">8. Kotaloha</th>
                           <td>5</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Susan Garisson</th>
+                          <th scope="row">9. Susan Garisson</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Nek</th>
+                          <th scope="row">10. Nek</th>
                           <td>2</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. </th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. </th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. </th>
-                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
