--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -230,20 +230,20 @@
                           <td>35</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Carrie Weese</th>
+                          <th scope="row">7. Tyler Uy</th>
+                          <td>34</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Carrie Weese</th>
                           <td>33</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Stormy</th>
+                          <th scope="row">9. Stormy</th>
                           <td>28</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Nek</th>
+                          <th scope="row">10. Nek</th>
                           <td>22</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Susan Garisson</th>
-                          <td>10</td>
                         </tr>
                       </tbody>
                     </table>
@@ -266,7 +266,7 @@
                           <td>377</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. John Graham</th>
+                          <th scope="row">2. JohnGraham</th>
                           <td>360</td>
                         </tr>
                         <tr>
@@ -282,24 +282,24 @@
                           <td>15</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Jesus b</th>
+                          <th scope="row">6. Tyler Uy</th>
+                          <td>11</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Jesus b</th>
                           <td>9</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Stormy</th>
+                          <th scope="row">8. Stormy</th>
                           <td>7</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Kotaloha</th>
+                          <th scope="row">9. Kotaloha</th>
                           <td>5</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Susan Garisson</th>
+                          <th scope="row">10. Susan Garisson</th>
                           <td>4</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Nek</th>
-                          <td>2</td>
                         </tr>
                       </tbody>
                     </table>
