update score April 10

--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -207,43 +207,43 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Kota Abbott</th>
-                          <td>614</td>
+                          <td>663</td>
                         </tr>
                         <tr>
                           <th scope="row">2. JohnGraham</th>
                           <td>561</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Bryan</th>
+                          <th scope="row">3. KOTALOHA</th>
+                          <td>336</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. Zerje Despi</th>
+                          <td>133</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Bryan</th>
                           <td>99</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. MJCP</th>
+                          <th scope="row">6. Gillian</th>
+                          <td>85</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Stormy</th>
+                          <td>80</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Ariana</th>
+                          <td>79</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. MJCP</th>
                           <td>74</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Kotaloha</th>
-                          <td>41</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">6. Jesus b</th>
-                          <td>35</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. Tyler Uy</th>
-                          <td>34</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. Carrie Weese</th>
-                          <td>33</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Stormy</th>
-                          <td>28</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Nek</th>
-                          <td>22</td>
+                          <th scope="row">10. Lee</th>
+                          <td>72</td>
                         </tr>
                       </tbody>
                     </table>
@@ -270,36 +270,36 @@
                           <td>360</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Bryan</th>
+                          <th scope="row">3. KOTALOHA</th>
+                          <td>120</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. Zerje Despi</th>
+                          <td>72</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Bryan</th>
                           <td>60</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. MJCP</th>
+                          <th scope="row">6. Gillian</th>
+                          <td>49</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Stormy</th>
+                          <td>46</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Ariana</th>
                           <td>37</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Carrie Weese</th>
-                          <td>15</td>
+                          <th scope="row">9. NJCP</th>
+                          <td>37</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Tyler Uy</th>
-                          <td>11</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. Jesus b</th>
-                          <td>9</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. Stormy</th>
-                          <td>7</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Kotaloha</th>
-                          <td>5</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Susan Garisson</th>
-                          <td>4</td>
+                          <th scope="row">10. Lee</th>
+                          <td>36</td>
                         </tr>
                       </tbody>
                     </table>
